# psimpl-code

./: CMakeLists.txt  README.md
cmake/: psimplConfig.cmake.in
demo/: CMakeLists.txt  DPWorker.cpp  DPWorker.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QTRules.rules  RenderArea.cpp  RenderArea.h  icons.qrc  main.cpp  psimpl.pro  psimpl.vcproj  psimpl_reference.h  resource.rc
doc/: Doxyfile
doc/article/: psimpl.htm
doc/web/: documentation.html  douglas-peucker.html  downloads.html  index.html  lang.html  news.html  nth-point.html  opheim.html  perpendicular-distance.html  positional-errors.html  radial-distance.html  reumann-witkam.html  style.css  template.html  validation.css
lib/: old_psimpl.h
lib/detail/: algo.h  error.h
speed/: CMakeLists.txt  clocktic.h  main.cpp  poly1.algo  poly1.poly  psimpl.pro
speed/prev/: psimpl.h
test/: CMakeLists.txt  TestDouglasPeucker.cpp  TestDouglasPeucker.h  TestError.h  TestLang.cpp  TestLang.h  TestMath.cpp  TestMath.h  TestNthPoint.cpp  TestNthPoint.h  TestOpheim.cpp  TestOpheim.h  TestPerpendicularDistance.cpp  TestPerpendicularDistance.h  TestPositionalError.cpp  TestPositionalError.h  TestRadialDistance.cpp  TestRadialDistance.h  TestReumannWitkam.cpp  TestReumannWitkam.h  TestSimplification.h  TestUtil.cpp  TestUtil.h  helper.h  main.cpp  psimpl.pro  psimpl.vcproj  test.cpp  test.h  test_helpers.h
